1/9/13 document game packages, change signatures of some constructors and methods for consistency [71586]
1/9/13 make some classes package private
1/9/13 move inner subclasses of ChallengeGraphNode to their own class files, rename
1/9/13 remove code in SlopeEquationNode related to putting m=rise/run on a separate line [71577]
1/9/13 merge GTL_GraphNode and MTE_GraphNode into ChallengeGraphNode
1/9/13 remove console logging that is no longer needed
1/9/13 document CoordinateSpinnerNode constructor
1/9/13 scale only the control panel that's too wide, not both control panels
1/9/13 center control panels in the right section of the canvas (first 3 tabs), scale control panels if i18n makes them too wide
1/8/13 for first 3 tabs, keep graph in same position, tweak position so that slope tool doesn't fall off left edge of play area
1/8/13 remove unnecessary IChallenge interface, rename base class MatchChallenge to Challenge
1/8/13 make specialized graphs inner classes of GTL_GraphNode
1/8/13 handle PTP challenges in the GTL view
1/8/13 make MatchChallenge.createInitialGuess private, make initial guess null for PTP challenges
1/8/13 PTP_GraphNode extends GTL_GraphNode
1/8/13 PTP_Challenge extends GTL_Challenge
1/8/13 rename GTL_GraphNode subclasses
1/8/13 rename ManipulationMode.POINTS to TWO_POINTS, change usage sites accordingly
1/8/13 add ManipulationMode.THREE_POINTS
1/8/13 a couple of tweaks to make GTL and PTP view implementations more similar, to ease refactoring
1/8/13 change "P3P" (Place 3 Points) to "PTP" (Place the Points) throughout code, to match terminology used by the team
# 0.00.48 (71539) Jan 8, 2013
1/8/13 demonstrate equation fixes
1/8/13 fix: in point-slope equations, if interactive rise=0, then noninteractive (x-x1) term disappears
1/8/13 fix: in slope-intercept equations, if interactive run=0, then noninteractive y-intercept is 0/0
1/8/13 fix: in slope-intercept equations, if interactive run=0, then interactive y-intercept can't be changed