@@ -1,3 +1,4 @@
+1/9/13 algorithm that forces inversion of slope, picks (x1,y1) on the graph such that (x2,y2) is off the graph
 1/9/13 document game packages, change signatures of some constructors and methods for consistency [71586]
 1/9/13 make some classes package private
 1/9/13 move inner subclasses of ChallengeGraphNode to their own class files, rename
